v19.2 - Legend alignment fixes, live reload, and startup script improvements

--- a/Chassis.css
+++ b/Chassis.css
@@ -55,8 +55,10 @@
 .legend-box {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    width: fit-content;
     min-width: fit-content;
+    margin-left: auto;
+    align-items: flex-end;
 }
 
 .legend-title {
